[gd_scene load_steps=2 format=3 uid="uid://c5q7moa6d42kr"]

[ext_resource type="Script" path="res://Scripts/Quiz.gd" id="1_v0n72"]

[node name="Quiz" type="CanvasLayer"]
script = ExtResource("1_v0n72")

[node name="Panel" type="Panel" parent="."]
offset_right = 480.0
offset_bottom = 271.0
scale = Vector2(1.00159, 1.00226)

[node name="VBoxContainer" type="VBoxContainer" parent="Panel"]
layout_mode = 0
offset_left = 58.9064
offset_top = 18.9572
offset_right = 375.906
offset_bottom = 181.957
scale = Vector2(1.21311, 1.14652)

[node name="QuestionLabel" type="Label" parent="Panel/VBoxContainer"]
layout_mode = 2
autowrap_mode = 2

[node name="ProgressLabel" type="Label" parent="Panel/VBoxContainer"]
layout_mode = 2

[node name="OptionA" type="Button" parent="Panel/VBoxContainer"]
layout_mode = 2

[node name="OptionB" type="Button" parent="Panel/VBoxContainer"]
layout_mode = 2

[node name="OptionC" type="Button" parent="Panel/VBoxContainer"]
layout_mode = 2

[node name="OptionD" type="Button" parent="Panel/VBoxContainer"]
layout_mode = 2
